# Computer-Graphics-Laboratories

./: lab3.4.cpp
CG Lab10/: CMakeLists.txt  README.md  main.cpp
CG Lab10/include/: boid.hpp  simulacion.hpp  vec2.hpp
CG Lab10/src/: simulacion.cpp
CG Lab7.2/: .clangd  CMakeLists.txt  README.md
CG Lab7.2/include/model/: geometry.hpp  scene.hpp
CG Lab7.2/include/presenter/: editor_presenter.hpp
CG Lab7.2/include/view/: opengl_view.hpp
CG Lab7.2/src/: main.cpp
CG Lab7.2/src/model/: scene.cpp
CG Lab7.2/src/presenter/: editor_presenter.cpp
CG Lab7.2/src/view/: opengl_view.cpp
CG Lab9/: app  main.cpp
CG lab3/: README.md  lab3.1.cpp  lab3.2.cpp  lab3.3.cpp
CG lab4/: README.md  lab3  lab4.0.cpp  lab4.1.cpp  lab4.2.cpp  lab4.3.cpp  lab4.4.cpp  lab4.5.cpp  lab4.6.cpp  lab4.7.1.cpp  lab4.7.2.cpp  lab4.7.3.cpp
CG lab5/: README.md  lab5.1.cpp  lab5.2.cpp  lab5.3.cpp  lab5.4.cpp  lab5.5.cpp
CG lab6/: CMakeLists.txt  README.md
CG lab6/include/model/: algorithms.hpp  geometry.hpp  scene.hpp
CG lab6/include/presenter/: editor_presenter.hpp
CG lab6/include/view/: opengl_view.hpp
CG lab6/src/: main.cpp
CG lab6/src/model/: algorithms.cpp  scene.cpp
CG lab6/src/presenter/: editor_presenter.cpp
CG lab6/src/view/: opengl_view.cpp
